--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ matrix:
   include:
     - os: linux
       language: python
+      python: "3.4"
+    - os: linux
+      language: python
+      python: "3.5"
+    - os: linux
+      language: python
       python: "3.6"
     - os: linux
       language: python
@@ -12,6 +18,8 @@ matrix:
       language: python
       python: "3.7-dev"
   allow_failures:
+    - python: "3.4"
+    - python: "3.5"
     - python: "3.6-dev"
     - python: "3.7-dev"
 
