--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,16 @@ version: "{build}"
 
 environment:
   matrix:
+    - PYTHON: "C:\\Python34"
+    - PYTHON: "C:\\Python34-x64"
+    - PYTHON: "C:\\Python35"
+    - PYTHON: "C:\\Python35-x64"
     - PYTHON: "C:\\Python36"
     - PYTHON: "C:\\Python36-x64"
+
+matrix:
+  allow_failures:
+    - PYTHON: "C:\\Python34-x64"
 
 init:
   - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
