--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Eclipse
 /.settings
 /.*project
+
+# Jupyter Notebook
+/.ipynb_checkpoints
+*-checkpoint.ipynb
+
 # Python
 /build
 /dist
@@ -9,6 +14,10 @@ __pycache__
 *.egg
 *.egg-info
 *.pyc
+
 # Python coverage
 /htmlcov
 /.coverage
+
+# other
+/examples.py
