--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,11 @@ install:
   - pip install -U -r dev_requirements.txt
 
 script:
-  - TEST_PACKAGING=1 python -m coverage run --branch --source . -m unittest discover --verbose
+  - TEST_PACKAGING=1 python -m coverage run --branch --source . -m unittest --verbose
 
 after_success:
   - python -m coverage report --show-missing
   - codecov
-  - python -m pylint --load-plugins=pylint.extensions.mccabe --docstring-min-length 5 --no-docstring-rgx "^(test)?_|.*Tests$" --unsafe-load-any-extension y --output-format colorized  --reports y $(find . -name "*.py")
 
 before_deploy:
   - pip3 install -U --user version_query || pip3 install -U version_query
