--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-sudo: false
 language: generic
 matrix:
   include:
-    - os: linux
-      language: python
-      python: "3.4"
     - os: linux
       language: python
       python: "3.5"
@@ -13,16 +9,14 @@ matrix:
       python: "3.6"
     - os: linux
       language: python
-      python: "3.7-dev"
-  allow_failures:
-    - python: "3.7-dev"
+      python: "3.7"
 
 install:
   - pip install -U pip
-  - pip install -U -r dev_requirements.txt
+  - pip install -U -r ci_requirements.txt
 
 script:
-  - TEST_PACKAGING=1 python -m coverage run --branch --source . -m unittest --verbose
+  - TEST_PACKAGING=1 python -m coverage run --branch --source . -m unittest -v
 
 after_success:
   - python -m coverage report --show-missing
