--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,12 +3,6 @@ version: "{build}"
 environment:
   matrix:
     - ARCHITECTURE: "x86"
-      PYTHON_VERSION: "3.4"
-      PYTHON: "C:\\Python34"
-    - ARCHITECTURE: "x64"
-      PYTHON_VERSION: "3.4"
-      PYTHON: "C:\\Python34-x64"
-    - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.5"
       PYTHON: "C:\\Python35"
     - ARCHITECTURE: "x64"
@@ -20,25 +14,25 @@ environment:
     - ARCHITECTURE: "x64"
       PYTHON_VERSION: "3.6"
       PYTHON: "C:\\Python36-x64"
-
-matrix:
-  allow_failures:
+    - ARCHITECTURE: "x86"
+      PYTHON_VERSION: "3.7"
+      PYTHON: "C:\\Python37"
     - ARCHITECTURE: "x64"
-      PYTHON_VERSION: "3.4"
-      PYTHON: "C:\\Python34-x64"
+      PYTHON_VERSION: "3.7"
+      PYTHON: "C:\\Python37-x64"
 
 init:
   - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
 
 install:
   - python -m pip install -U pip
-  - python -m pip install -U -r dev_requirements.txt
+  - python -m pip install -U -r ci_requirements.txt
 
 build: off
 
 test_script:
   - set TEST_PACKAGING=1
-  - python -m coverage run --branch --source . -m unittest --verbose
+  - python -m coverage run --branch --source . -m unittest -v
 
 after_test:
   - python -m coverage report --show-missing
